--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 
 # Generated via Node.js
 node_modules
+# Generated via dotenv
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Generated via next-pwa
 **/public/workbox**
