--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.2.3",
+		"axios": "^1.10.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.525.0",
 		"next": "14.1.1",
 		"next-pwa": "^5.6.0",
 		"next-themes": "^0.2.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.28.0",
+		"@babel/preset-env": "^7.28.0",
 		"@types/node": "^20.8.4",
 		"@types/react": "^18.2.28",
 		"autoprefixer": "^10.4.16",
+		"babel-eslint": "^10.1.0",
 		"eslint": "^8.51.0",
 		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
